--- a/mywebsite.html
+++ b/mywebsite.html
@@ -1,1 +1,30 @@
-# webdevelopmentgranth
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>My Webpage Portfolio.</title>
+</head>
+
+<body>
+<h1>Granth Gupta's Portfolio!</h1>
+
+<h2>I'm a Web Developer.</h2>
+
+<hr />
+
+<h3><a href="./public/movie-ranking.html">Movie Ranking Project.</a></h3>
+
+<img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking Screenshot" />
+
+<h3><a href="./public/birthday-invite.html">Birthday Invite Project.</a></h3>
+
+<img src="./assets/images/birthday-invite.png" height="200" alt="Birthday Cake" />
+
+<hr />
+
+<h3><a href="./public/about.html">About Me.</a></h3>   <h3><a href="./public/contact.html">Contact Me.</a></h3>
+
+</body>
+
+</html>
